; ModuleID = '/home/carl/AnghaBench/git/compat/win32/extr_syslog.c_openlog.c'
source_filename = "/home/carl/AnghaBench/git/compat/win32/extr_syslog.c_openlog.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ms_eventlog = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [34 x i8] c"RegisterEventSource() failed: %lu\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @openlog(i8* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load i64, i64* @ms_eventlog, align 8
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %10

9:                                                ; preds = %3
  br label %18

10:                                               ; preds = %3
  %11 = load i8*, i8** %4, align 8
  %12 = call i64 @RegisterEventSourceA(i32* null, i8* %11)
  store i64 %12, i64* @ms_eventlog, align 8
  %13 = load i64, i64* @ms_eventlog, align 8
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %18, label %15

15:                                               ; preds = %10
  %16 = call i32 (...) @GetLastError()
  %17 = call i32 @warning(i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str, i64 0, i64 0), i32 %16)
  br label %18

18:                                               ; preds = %9, %15, %10
  ret void
}

declare dso_local i64 @RegisterEventSourceA(i32*, i8*) #1

declare dso_local i32 @warning(i8*, i32) #1

declare dso_local i32 @GetLastError(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
